--- a/assets/css/auteur.css
+++ b/assets/css/auteur.css
@@ -1,68 +1,53 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
+* {
     margin: 0;
-}
-
-html {
+    padding: 0;
+    scroll-behavior: smooth;
     box-sizing: border-box;
 }
 
-*, *:before, *:after {
-    box-sizing: inherit;
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url('./bg_carte.png');
 }
 
-.column {
-    float: left;
-    width: 33.3%;
-    margin-bottom: 16px;
-    padding: 0 8px;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: 8px;
-}
-
-.about-section {
-    padding: 50px;
-    text-align: center;
-    background-color: #474e5d;
-    color: white;
-}
-
-.container {
-    padding: 0 16px;
-}
-
-.container::after, .row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.title {
-    color: grey;
-}
-
-.button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
+.about {
     width: 100%;
+    text-align: center;
 }
 
-.button:hover {
-    background-color: #555;
+.about h1 {
+    font-size: 3.5em;
+    margin-bottom: 30px;
 }
 
-@media screen and (max-width: 650px) {
-    .column {
-        width: 100%;
-        display: block;
-    }
+.about p {
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.ourTeam {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.ourTeam .ourTeamCard {
+    padding: 2em 3em;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+.ourTeam .ourTeamCard h2 {
+    font-size: 2.3em;
+}
+
+.ourTeam .ourTeamCard p {
+    font-size: 1.2em;
+}
+
+.ourTeam .ourTeamCard img {
+    max-width: 200px;
 }
