--- a/assets/css/drone.css
+++ b/assets/css/drone.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url('./bg_carte.png');
 }
 .container {
     height: 90vh;
@@ -22,6 +23,9 @@ body {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
+}
+.container .listCard a {
+    text-decoration: none;
 }
 
 .container .card {
