--- a/templates/auteur.html
+++ b/templates/auteur.html
@@ -1,256 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="../assets/css/auteur.css">
     <title>Drona</title>
+    <link rel="stylesheet" href="../assets/css/auteur.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+
 </head>
 
 <body>
-<div class="about-section">
-    <h1>Drona</h1>
-    <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type , courte à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client. Son objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir d'une technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons, ou l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service le plus rapide à ce jour.
-    </p>
-</div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="../assets/css/logo.png">
 
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/prescila.png" alt="Prescila" style="width:10%">
-            <div class="container">
-                <h2>Prescila Messerschmidt</h2>
-                <p class="title">Patron tyran</p>
-                <p>Some text </p>
-                <p>prescila@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+                </a>
+                <div class="d-flex">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/nans.png" alt="Nans" style="width:10%">
-            <div class="container">
-                <h2>Nans Boyer</h2>
-                <p class="title">AudioVisuel</p>
-                <p>Some text </p>
-                <p>nans@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+                            <!-- Accueil -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                                </div>
+                            </li>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/avatar-gratuit%20(3).png" alt="Charles" style="width:10%">
-            <div class="container">
-                <h2>Charles Fournales</h2>
-                <p class="title">AudioVisuel</p>
-                <p>Some text </p>
-                <p>charles@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+                            <!-- Nos drones -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" aria-current="page" href="drone.html">Voir nos drones</a>
+                                </div>
+                            </li>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/morgan.png" alt="Morgan" style="width:10%">
-            <div class="container">
-                <h2>Morgan Jamain</h2>
-                <p class="title">Animation 3D</p>
-                <p>Some text </p>
-                <p>morgan@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
+                            <!-- A propos -->
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</div>
+        </nav>
+    </header>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/elora.png" alt="Elora" style="width:10%">
-            <div class="container">
-                <h2>Elora Heilly</h2>
-                <p class="title">Animation 3D</p>
-                <p>Some text </p>
-                <p>morgan@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
+    <div class="about">
+        <h1>Drona</h1>
+        <p>Drona est une entreprise spécialisé dans le transport autonome aéroporté de fourniture de tout type , courte
+            à moyenne portée.Elle intervient à l’échèlle d'une ville entre le centre de dépôt de colis et le client. Son
+            objectif est de fournir un service de livraison plus rapide que les moyens conventionnels. A partir d'une
+            technologie déjà existante mais optimisée et améliorée , le service de livraison permettra de satisfaire
+            tout types de situation. Que ce soit de la demande d'un particulier irrité par les délais de livraisons, ou
+            l'urgence d'une entreprise cherchant à remplacer une pièce manquante, nos drones fourniront le service le
+            plus rapide à ce jour.
+        </p>
+    </div>
+    <hr>
+    <h1 style="text-align: center; margin-bottom: 50px;">Notre équipe</h1>
+    <div class="ourTeam">
+        <div class="ourTeamCard">
+            <h2>Prescila Messerschmidt</h2>
+            <p>Animation 3D</p>
+            <img src="../assets/img/avatars/prescila.png" alt="prescila">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Nans Boyer</h2>
+            <p>AudioVisuel</p>
+            <img src="../assets/img/avatars/nans.png" alt="nans">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Charles Fournales</h2>
+            <p>AudioVisuel</p>
+            <img src="../assets/img/avatars/charles.png" alt="charles">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Morgan Jamain</h2>
+            <p>Animation 3D</p>
+            <img src="../assets/img/avatars/morgan.png" alt="morgan">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Elora Heilly</h2>
+            <p>Animation 3D</p>
+            <img src="../assets/img/avatars/elora.png" alt="elora">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Charline Portal</h2>
+            <p>Création Design</p>
+            <img src="../assets/img/avatars/charline.png" alt="charline">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Aimé Polelei</h2>
+            <p>Création Design</p>
+            <img src="../assets/img/avatars/aimé.png" alt="aimé">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Lina Rodes</h2>
+            <p>Market' Com</p>
+            <img src="../assets/img/avatars/lina.png" alt="lina">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Florian Lejosne</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/florian.png" alt="florian">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Nicolas Guitay</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/nicolas.png" alt="nicolas">
+        </div>
+        <div class="ourTeamCard">
+            <h2>William Dubois</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/william.png" alt="william">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Loup Bruneau</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/loup.png" alt="loup">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Sylvain Lespagnol</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/sylvain.png" alt="sylvain">
+        </div>
+        <div class="ourTeamCard">
+            <h2>Alexandre Vernet</h2>
+            <p>Informatique</p>
+            <img src="../assets/img/avatars/alexandre.png" alt="alexandre">
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/charline.png" alt="Charline" style="width:10%">
-            <div class="container">
-                <h2>Charline Portal</h2>
-                <p class="title">Création Design</p>
-                <p>Some text </p>
-                <p>charline@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/aimé.png" alt="Aimé" style="width:10%">
-            <div class="container">
-                <h2>Aimé Polelei</h2>
-                <p class="title">Création Design</p>
-                <p>Some text </p>
-                <p>aimé@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/lina.png" alt="Lina" style="width:10%">
-            <div class="container">
-                <h2>Lina Rodes</h2>
-                <p class="title">Market'Com</p>
-                <p>Some text </p>
-                <p>lina@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/florian.png" alt="Florian" style="width:10%">
-            <div class="container">
-                <h2>Florian Lejosne</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>florian@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
+    <div class="footer">
+        <div class="social">
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/nicolas.png" alt="Nicola" style="width:10%">
-            <div class="container">
-                <h2>Nicolas Guitay</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>nicolas@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/william.png" alt="William"
-                 style="width:10%">
-            <div class="container">
-                <h2>William</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>william@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/loup.png" alt="Loup" style="width:10%">
-            <div class="container">
-                <h2>Loup Bruneau</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>loup@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/sylvain.png" alt="Sylvain"
-                 style="width:10%">
-            <div class="container">
-                <h2>Sylvain Lespagnol</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>sylvain@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <img src="../assets/css/alexandre.png" alt="Alexandre"
-                 style="width:10%">
-            <div class="container">
-                <h2>Alexandre Vernet</h2>
-                <p class="title">Informatique</p>
-                <p>Some text </p>
-                <p>alexandre@ynov.com</p>
-                <p>
-                    <button class="button">Contact</button>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
 
 </body>
+
 </html>
