--- a/templates/drone.html
+++ b/templates/drone.html
@@ -8,24 +8,17 @@
     <title>Drona - Nos drones</title>
     <link rel="stylesheet" href="../assets/css/drone.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="../assets/css/logo.png">
 
                 </a>
@@ -36,40 +29,27 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav mr-auto">
+
+                            <!-- Accueil -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Nos drones
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li>
-                                        <option class="dropdown-item" href="joe.html">Modèle J</option>
-                                    </li>
-                                    <li>
-                                        <option class="dropdown-item" href="william.html">Modèle W</option>
-                                    </li>
-                                    <li>
-                                        <option class="dropdown-item" href="averell.html">Modèle A</option>
-                                    </li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                </ul>
 
+                            <!-- Nos drones -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" aria-current="page" href="drone.html">Voir nos drones</a>
+                                </div>
                             </li>
+
+                            <!-- A propos -->
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
                             </li>
-
                         </ul>
-
-                        <a class="nav-link active white" aria-current="page" href="inscription.html">Inscription</a>
                     </div>
                 </div>
             </div>
@@ -78,24 +58,30 @@
 
     <div class="container">
         <div class="listCard">
-            <div class="card">
-                <h2>Nom du drone</h2>
-                <p>prix</p>
-                <img src="../assets/img/test.png" alt="logo">
-                <p>Petite description</p>
-            </div>
-            <div class="card">
-                <h2>Nom du drone</h2>
-                <p>prix</p>
-                <img src="../assets/img/test.png" alt="logo">
-                <p>Petite description</p>
-            </div>
-            <div class="card">
-                <h2>Nom du drone</h2>
-                <p>prix</p>
-                <img src="../assets/img/test.png" alt="logo">
-                <p>Petite description</p>
-            </div>
+            <a href="./joe.html">
+                <div class="card">
+                    <h2>Joe</h2>
+                    <p>prix</p>
+                    <img src="../assets/img/test.png" alt="logo">
+                    <p>Petite description</p>
+                </div>
+            </a>
+            <a href="william.html">
+                <div class="card">
+                    <h2>William</h2>
+                    <p>prix</p>
+                    <img src="../assets/img/test.png" alt="logo">
+                    <p>Petite description</p>
+                </div>
+            </a>
+            <a href="william.html">
+                <div class="card">
+                    <h2>Averell</h2>
+                    <p>prix</p>
+                    <img src="../assets/img/test.png" alt="logo">
+                    <p>Petite description</p>
+                </div>
+            </a>
         </div>
     </div>
 
