--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Drona - Nos drones</title>
+    <title>Drona</title>
+    <link rel="stylesheet" href="../assets/css/index.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="../assets/css/logo.png">
 
                 </a>
@@ -35,51 +29,39 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav mr-auto">
+
+                            <!-- Accueil -->
                             <li class="nav-item">
                                 <div class="d-flex justify-content-center">
-                                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Nos drones
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li>
-                                        <option class="dropdown-item" href="joe.html">Modèle J</option>
-                                    </li>
-                                    <li>
-                                        <option class="dropdown-item" href="william.html">Modèle W</option>
-                                    </li>
-                                    <li>
-                                        <option class="dropdown-item" href="averell.html">Modèle A</option>
-                                    </li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                </ul>
 
+                            <!-- Nos drones -->
+                            <li class="nav-item">
+                                <div class="d-flex justify-content-center">
+                                    <a class="nav-link active" aria-current="page" href="drone.html">Voir nos drones</a>
+                                </div>
                             </li>
+
+                            <!-- A propos -->
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="auteur.html">A propos</a>
                             </li>
-
                         </ul>
-
-                        <a class="nav-link active white" aria-current="page" href="inscription.html">Inscription</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    <main>
 
-     
-
-    </main>
-
+    <div class="container">
+        <iframe width="800" height="450" src="https://www.youtube.com/embed/VWYmx-zXSLk" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <h1>"Votre commande dans les temps pour le meilleur de l'environnement"</h1>
+    </div>
 
     <div class="footer">
         <div class="social">
@@ -89,7 +71,6 @@
             <i class="fab fa-twitter"></i>
         </div>
     </div>
-
 
 </body>
 
